# image-search

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  supervisord.conf  ui_app.py
app/: app.py  config.py  explain.py  helper.py  image_metadata.csv  inference.py
