[project]
name = "img-search-usecase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.11.0",
    "fastapi[standard]>=0.115.13",
    "huggingface-hub>=0.33.0",
    "openai>=1.90.0",
    "pandas>=2.3.0",
    "python-dotenv>=1.1.0",
    "streamlit>=1.46.0",
    "tokenizers>=0.15.2",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "transformers==4.37.0",
]
